--- a/_data/data.yml
+++ b/_data/data.yml
@@ -27,7 +27,7 @@ career-profile:
       Donec quam felis, ultricies nec, pellentesque eu.
       Second paragraph if required.
 education:
-    - degree: Pursuing Master's degree
+    - degree: Pursuing Master's degree in Computer Science
       university: Handong Global University
       time: 2020 - Present
       details: |
@@ -38,7 +38,7 @@ education:
         pretium quis, sem.
           - Bullet point
           - Bullet point
-    - degree: BSc in Applied Mathematics
+    - degree: BSc in Computer Science
       university: Handong Global University
       time: 2014 - 2019
       details: |
@@ -76,18 +76,7 @@ experiences:
         pellentesque eu, pretium quis, sem.
           - Bullet point
           - Bullet point
-    - role: UI Developer
-      time: 2012 - 2014
-      company: Amazon, London
-      details: |
-        Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem.
-          - Bullet point
-          - Bullet point
-projects:
+    projects:
     title: Projects
     intro: >
       You can list your side projects or open source libraries in this
@@ -121,17 +110,12 @@ publications:
       amet, consectetur adipiscing elit. Vestibulum et ligula in nunc
       bibendum fringilla a eu lectus.
     papers:
-      - title: The Art of Computer Programming
+      - title: "Improving Configurability of Unit-level Continuous Fuzzing: An Industrial Case Study with SAP HANA"
         link: "#"
-        authors: Donald E. Knuth
-        conference: Addison-Wesley, 1968
+        authors: H. Yoo, J. Hong, B. Lucas, D. W. Hwang, S. Hong
+        conference: The 36th IEEE/ACM International Conference on Automated Software Engineering (ASE), Industry Showcase, 2021
 
-      - title: "Genetic Programming III: Darwinian Invention &amp; Problem Solving"
+      - title: "OSSFuzzBugs: A Collection of Open-source Real-world Fault Artifacts for Experimenting Unit-level Fuzzing Techniques"
         link: "#"
-        authors: Koza, J.R., Andre, D., Bennett, F.H., Keane, M.A.
-        conference: "Morgan Kaufmann Publishers Inc., San Francisco, CA, USA, 1st edn. (1999)"
-
-      - title: A syntax directed compiler for Algol 60
-        link: "#"
-        authors: Edgar T. Irons
-        conference: "Comm. ACM 4 (1961), 51–55"
+        authors: H. Yoo and S. Hong
+        conference: Korean Congress of Computing (KCC), Jun 23-25, 2021
