--- a/_data/data.yml
+++ b/_data/data.yml
@@ -18,8 +18,8 @@ sidebar:
 
 career-profile:
     title: Career Profile
-    summary: 
-        Hanyoung Yoo is graduate student at Department of Information and Communication Engineering in Handong Global University(HGU), where he is memeber of ARISE lab. He received B.S degree in Computer Science from School of Computer Science and Electrical Engineering in Handong Global University
+    summary: Hanyoung Yoo is graduate student at Department of Information and Communication Engineering in Handong Global University(HGU), where he is memeber of ARISE lab. He received B.S degree in Computer Science from School of Computer Science and Electrical Engineering in Handong Global University
+
 education:
     - degree: Pursuing Master's degree in Computer Science
       university: Handong Global University
